--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,22 @@
 	</build>
 	<dependencies>
 
+      <dependency>
+          <groupId>io.greenscreens</groupId>
+          <artifactId>jt400-extra</artifactId>
+          <version>1.2.1</version>
+          <scope>system</scope>
+          <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jt400-extra-1.2.1.jar</systemPath>
+      </dependency>
+
+      <dependency>
+          <groupId>io.greenscreens</groupId>
+          <artifactId>quark</artifactId>
+          <version>2.1.0</version>
+          <scope>system</scope>
+          <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/quark-2.1.0.jar</systemPath>
+      </dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
