--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>io.greenscreens.quark-demo</groupId>
 	<artifactId>demo</artifactId>
 	<version>1.0.0</version>
@@ -15,83 +15,53 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.version>3.8.1</maven.compiler.version>
+		<maven.eclipse.plugin>2.10</maven.eclipse.plugin>
+		<maven.install.plugin>3.0.0-M1</maven.install.plugin>
+		<maven.recources.plugin>3.0.0</maven.recources.plugin>
+		<maven.jar.version>3.2.0</maven.jar.version>
+		<maven.war.version>3.3.1</maven.war.version>
+		<maven.proguard.version>2.3.1</maven.proguard.version>
+		<bcastle.version>1.67</bcastle.version>
+		<jackson.version>2.12.1</jackson.version>
 	</properties>
 
 	<build>
-		<finalName>demo</finalName>
-		<pluginManagement>
-			<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-			<plugins>
-				<plugin>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.1.0</version>
-				</plugin>
-				<!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-				<plugin>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.0.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.1</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>3.2.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>2.5.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.8.2</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+		<finalName>${project.artifactId}</finalName>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+
+		</plugins>
 	</build>
+
 	<dependencies>
-
-      <dependency>
-          <groupId>io.greenscreens</groupId>
-          <artifactId>jt400-extra</artifactId>
-          <version>1.2.1</version>
-          <scope>system</scope>
-          <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jt400-extra-1.2.1.jar</systemPath>
-      </dependency>
-
-      <dependency>
-          <groupId>io.greenscreens</groupId>
-          <artifactId>quark</artifactId>
-          <version>2.1.0</version>
-          <scope>system</scope>
-          <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/quark-2.1.0.jar</systemPath>
-      </dependency>
+		<dependency>
+			<groupId>io.greenscreens</groupId>
+			<artifactId>jt400-extra</artifactId>
+			<version>1.2.1</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jt400-extra-1.2.1.jar</systemPath>
+		</dependency>
 
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.9.8</version>
+			<groupId>io.greenscreens</groupId>
+			<artifactId>quark</artifactId>
+			<version>2.1.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/quark-2.2.0.jar</systemPath>
 		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.9.8</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.5</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.module</groupId>
-			<artifactId>jackson-module-jaxb-annotations</artifactId>
-			<version>2.11.1</version>
-		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -122,16 +92,30 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.66</version>
-			<scope>runtime</scope>
+			<version>${bcastle.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcpkix-jdk15on</artifactId>
-			<version>1.66</version>
-			<scope>runtime</scope>
+			<version>${bcastle.version}</version>
 		</dependency>
 
 		<!-- This segment required if JSR380 bean validation is used -->
@@ -161,7 +145,7 @@
 			<version>6.1.5.Final</version>
 		</dependency>
 
-		<!-- This segment required only for JT400 demo, no framewrk itself -->
+		<!-- This segment required only for JT400 demo, no framework itself -->
 		<dependency>
 			<groupId>net.sf.jt400</groupId>
 			<artifactId>jt400</artifactId>
@@ -169,4 +153,5 @@
 		</dependency>
 
 	</dependencies>
+
 </project>
